--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,46 @@
         android:theme="@style/Theme.Sprintly_app_smd_finale"
         tools:targetApi="31">
 
-        <activity android:name=".CalendarActivity" android:exported="false" />
-        <activity android:name=".codeActivity" android:exported="false" />
-        <activity android:name=".task_list" android:exported="false" />
-        <activity android:name=".chatting" android:exported="false" />
-        <activity android:name=".main_dashboard" android:exported="false" />
-        <activity android:name=".signup_page" android:exported="false" />
-        <activity android:name=".login" android:exported="false" />
-        <activity android:name=".onboard3" android:exported="false" />
-        <activity android:name=".onboard2" android:exported="false" />
-        <activity android:name=".onboard1" android:exported="false" />
 
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CalendarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".codeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".task_list"
+            android:exported="false" />
+        <activity
+            android:name=".chatting"
+            android:exported="false" />
+        <activity
+            android:name=".main_dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".signup_page"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
+        <activity
+            android:name=".onboard3"
+            android:exported="false" />
+        <activity
+            android:name=".onboard2"
+            android:exported="false" />
+        <activity
+            android:name=".onboard1"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
